# google_translate

./: Cargo.toml  README.md  example.txt  langs.txt
src/: lang.rs  lib.rs  tests.rs
