[package]
name = "google_translate"
version = "0.1.0"
edition = "2021"

[dependencies]
#phf = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.11.2", features = ["blocking"] }
serde_json = "1.0"
strum = { default-features = false, version = "0.24" }
strum_macros = "0.24"
urlencoding = "2.1.2"