[package]
name = "google_translate"
version = "0.1.0"
authors = ["float3"]
edition = "2021"
repository = "https://github.com/float3/google_translate.git"
readme = "README.md"
license = "AGPL-3.0"
exclude = ["/.travis.yml"]
description = "Google Translate API library"

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking"], default-features = false }
serde_json = "1.0"
urlencoding = "2.1.2"